# nerves_system_rpi4_intuitivo

./: .gitignore  Config.in  cmdline.txt  config.txt  linux-6.1.defconfig  mix.exs  nerves_defconfig  user.txt
package/greengrass-lite/: 0001-cmake-disable-ipo-when-cross-compiling.patch  0002-cmake-ggl-bin-static-link-group.patch  0003-gghealthd-skip-systemd-bus-enosys.patch  0004-gghealthd-synthetic-lifecycle-finished-no-dbus.patch  0005-ggipc-auth-fallback-no-systemd-cmdline.patch  0006-recipe-architecture-detail-matching.patch  Config.in  greengrass-lite.mk
package/libsystemd-stub/: Config.in  libsystemd-stub.mk
package/libsystemd-stub/src/: CMakeLists.txt  libsystemd.pc.in  sd_stub.c
package/libsystemd-stub/src/systemd/: sd-bus.h  sd-daemon.h  sd-event.h  sd-login.h
rootfs_overlay/etc/: erlinit.config
